feat: Introduce interactive envelope animation with music playback and correct signature names.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p>Niech magia nadchodzących Świąt wypełni Twój dom radością, a serce głębokim spokojem.</p>
                             <p>Niech każda chwila spędzona w gronie bliskich stanie się pięknym wspomnieniem, a nadchodzący Nowy Rok przyniesie realizację najskrytszych marzeń.</p>
                             <br>
-                            <p class="signature">Z najserdeczniejszymi życzeniami,<br>Aneta, Wojciech, Magdalena, Paweł Kochańscy</p>
+                            <p class="signature">Z najserdeczniejszymi życzeniami,<br>Aneta, Wojtek, Magda, Paweł Kochańscy</p>
                         </div>
                     </div>
                 </div>
