--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magical Christmas Wishes</title>
+    <title>Wesołych Świąt</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="A magical digital Christmas card with interactive 3D tree and heartwarming wishes.">
