--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Wesołych Świąt</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="A magical digital Christmas card with interactive 3D tree and heartwarming wishes.">
+    <meta name="description" content="Magiczna cyfrowa kartka świąteczna z interaktywnym drzewkiem 3D i wzruszającymi życzeniami.">
     <meta name="theme-color" content="#0a192f">
 
     <!-- Google Fonts -->
